@@ -4,6 +4,10 @@ Unreleased
 - The 'to_hostname' filter now parses multiple email addresses and checks the
   'Cc' header as well as the 'To' header.  (LP #659243)
 
+- If multiple incoming messages in a 24 hour period have the same Message-Id,
+  they are presumed to be duplicates and all but the first are discarded.
+  (LP #659243)
+
 0.7 (2010-09-15)
 ----------------
 
